@@ -1,200 +1,179 @@
 package com.aynikortex.backend.content.service;
 
-import com.aynikortex.backend.content.dto.ContentResponseDTO;
-import com.aynikortex.backend.content.dto.FileContentRequest;
-import com.aynikortex.backend.content.dto.KeywordDTO;
-import com.aynikortex.backend.content.dto.TextContentRequest;
+import com.aynikortex.backend.content.dto.request.CreateFileContentRequest;
+import com.aynikortex.backend.content.dto.request.CreateTextContentRequest;
+import com.aynikortex.backend.content.dto.response.ContentResponseDTO;
+import com.aynikortex.backend.content.entity.Content;
+import com.aynikortex.backend.content.entity.Keyword;
+import com.aynikortex.backend.content.enums.FileFormat;
+import com.aynikortex.backend.content.mapper.ContentMapper;
 import com.aynikortex.backend.content.repository.ContentRepository;
-import com.aynikortex.backend.entity.Contenido;
-import com.aynikortex.backend.entity.ContentType;
-import com.aynikortex.backend.entity.FileFormatType;
+import com.aynikortex.backend.exception.ContentNotFoundException;
 import com.aynikortex.backend.integration.dto.response.ClassificationResponse;
 import com.aynikortex.backend.integration.service.DataScienceIntegrationService;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class ContentService {
 
     private final ContentRepository contentRepository;
-    private final DataScienceIntegrationService dataScienceService;
+    private final ContentMapper contentMapper;
+    private final FileStorageService fileStorageService;
+    private final DataScienceIntegrationService dataScienceIntegrationService;
 
-    public ContentService(ContentRepository contentRepository,
-                          DataScienceIntegrationService dataScienceService) {
+    public ContentService(
+            ContentRepository contentRepository,
+            ContentMapper contentMapper,
+            FileStorageService fileStorageService,
+            DataScienceIntegrationService dataScienceIntegrationService
+    ) {
         this.contentRepository = contentRepository;
-        this.dataScienceService = dataScienceService;
+        this.contentMapper = contentMapper;
+        this.fileStorageService = fileStorageService;
+        this.dataScienceIntegrationService = dataScienceIntegrationService;
     }
 
-    @Transactional
-    public ContentResponseDTO createTextContent(TextContentRequest requestDTO) {
-        Contenido contenido = new Contenido();
-        contenido.setTitle(requestDTO.title());
-        contenido.setTextContent(requestDTO.text());
-        contenido.setContentType(ContentType.TEXT);
-        contenido.setCreatedAt(LocalDateTime.now());
+    public ContentResponseDTO createTextContent(
+            CreateTextContentRequest request
+    ) {
 
-        Contenido savedContenido = contentRepository.save(contenido);
+        // 1. Request → Entity
+        Content content = contentMapper.toEntity(request);
 
-        try {
-            ClassificationResponse dsResponse = dataScienceService.classifyText(
-                    requestDTO.title(),
-                    requestDTO.text(),
-                    requestDTO.metadata()
-            );
+        // 2. Primer guardado
+        content = contentRepository.save(content);
 
-            if (dsResponse != null && "SUCCESS".equalsIgnoreCase(dsResponse.status())) {
-                updateEntityWithClassification(savedContenido, dsResponse);
-                savedContenido = contentRepository.save(savedContenido);
-            }
+        // 3. Solicitar clasificación a DS
+        ClassificationResponse response =
+                dataScienceIntegrationService.classifyText(
+                        content.getTitle(),
+                        content.getTextContent(),
+                        null
+                );
 
-        } catch (Exception e) {
-            throw new RuntimeException("Error durante la clasificación de texto: " + e.getMessage(), e);
-        }
+        // 4. Aplicar clasificación
+        applyClassification(content, response);
 
-        return mapToResponseDTO(savedContenido);
+        // 5. Segundo guardado
+        content = contentRepository.save(content);
+
+        // 6. Entity → Response DTO
+        return contentMapper.toResponseDTO(content);
     }
 
-    @Transactional
-    public ContentResponseDTO createFileContent(FileContentRequest requestDTO) {
-        String originalFileName = requestDTO.file().getOriginalFilename();
-        String simulatedFilePath = "/oci/storage/" + UUID.randomUUID() + "_" + originalFileName;
+    public ContentResponseDTO createFileContent(
+            CreateFileContentRequest request
+    ){
 
-        Contenido contenido = new Contenido();
-        contenido.setTitle(requestDTO.title() != null ? requestDTO.title() : originalFileName);
-        contenido.setFileName(originalFileName);
-        contenido.setFilePath(simulatedFilePath);
-        contenido.setFileFormat(determineFileFormat(originalFileName));
-        contenido.setContentType(ContentType.FILE);
-        contenido.setCreatedAt(LocalDateTime.now());
+        // 1. Determinar el formato del archivo
+        FileFormat fileFormat = FileFormat.fromFilename(
+                request.file().getOriginalFilename()
+        );
 
-        Contenido savedContenido = contentRepository.save(contenido);
+        // 2. Guardar físicamente el archivo
+        String filePath = fileStorageService.save(request.file());
 
-        try {
-            ClassificationResponse dsResponse = dataScienceService.classifyFile(
-                    requestDTO.file(),
-                    requestDTO.metadata()
-            );
 
-            System.out.println(">>> RESPUESTA COMPLETA DE DS: " + dsResponse);
+        // 3. Request → Entity
+        Content content = contentMapper.toEntity(
+                request,
+                filePath,
+                fileFormat
+        );
 
-            if (dsResponse != null && "SUCCESS".equalsIgnoreCase(dsResponse.status())) {
-                updateEntityWithClassification(savedContenido, dsResponse);
-                savedContenido = contentRepository.save(savedContenido);
-            }
+        // 4. Primer guardado
+        content = contentRepository.save(content);
 
-        } catch (Exception e) {
-            throw new RuntimeException("Error durante la clasificación de archivo: " + e.getMessage(), e);
-        }
+        // 5. Solicitar clasificación a Data Science
+        ClassificationResponse response =
+                dataScienceIntegrationService.classifyFile(
+                        request.file(),
+                        null
+                );
 
-        return mapToResponseDTO(savedContenido);
+        // 6. Aplicar clasificación
+        applyClassification(content, response);
+
+        // 7. Segundo guardado
+        content = contentRepository.save(content);
+
+        // 8. Entity → Response DTO
+        return contentMapper.toResponseDTO(content);
     }
 
-    private void updateEntityWithClassification(Contenido entidad, ClassificationResponse response) {
-        var classification = response.classification();
-        if (classification != null) {
-            entidad.setCategory(classification.category());
-            entidad.setSubCategory(classification.subcategory());
-            if (classification.confidence() != null) {
-                entidad.setConfidence(classification.confidence().doubleValue());
-            }
+    private void applyClassification(
+            Content content,
+            ClassificationResponse response
+    ) {
+        content.setCategory(response.classification().category());
+        content.setSubcategory(response.classification().subcategory());
+        content.setConfidence(response.classification().confidence());
+        content.setSummary(response.classification().summary());
+        content.setModelVersion(response.modelVersion());
 
-            if (classification.keywords() != null) {
-                List<KeywordDTO> keywordDTOs = classification.keywords().stream()
-                        .map(k -> new KeywordDTO(
-                                k.term(),
-                                k.score() != null ? k.score().doubleValue() : 0.0
+        content.setKeywords(
+                response.classification().keywords()
+                        .stream()
+                        .map(keyword -> new Keyword(
+                                keyword.term(),
+                                keyword.score()
                         ))
-                        .collect(Collectors.toList());
-                entidad.setKeywords(keywordDTOs);
-            }
-
-            entidad.setSummary(classification.summary());
-        }
-        entidad.setModelVersion(response.modelVersion());
-        entidad.setUpdatedAt(LocalDateTime.now());
-    }
-
-    private FileFormatType determineFileFormat(String fileName) {
-        if (fileName == null) return FileFormatType.OTHER;
-        String lowerName = fileName.toLowerCase();
-        if (lowerName.endsWith(".pdf")) return FileFormatType.PDF;
-        if (lowerName.endsWith(".docx")) return FileFormatType.DOCX;
-        if (lowerName.endsWith(".txt")) return FileFormatType.TXT;
-        if (lowerName.endsWith(".md")) return FileFormatType.MARKDOWN;
-        return FileFormatType.OTHER;
-    }
-
-    private ContentResponseDTO mapToResponseDTO(Contenido c) {
-        List<String> keywordStrings = null;
-        if (c.getKeywords() != null) {
-            keywordStrings = c.getKeywords().stream()
-                    .map(KeywordDTO::getWord)
-                    .collect(Collectors.toList());
-        }
-
-        return new ContentResponseDTO(
-                c.getId(),
-                c.getTitle(),
-                c.getContentType(),
-                c.getTextContent(),
-                c.getCategory(),
-                c.getSubCategory(),
-                c.getConfidence(),
-                keywordStrings,
-                c.getSummary(),
-                c.getCreatedAt()
+                        .toList()
         );
     }
 
-    @Transactional(readOnly = true)
     public List<ContentResponseDTO> getAllContents() {
-        return contentRepository.findAll().stream()
-                .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
+
+        return contentRepository.findAll()
+                .stream()
+                .map(contentMapper::toResponseDTO)
+                .toList();
     }
 
-    @Transactional(readOnly = true)
     public ContentResponseDTO getContentById(UUID id) {
-        Contenido contenido = contentRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Contenido no encontrado con ID: " + id));
-        return mapToResponseDTO(contenido);
+
+        Content content = contentRepository.findById(id)
+                .orElseThrow(() -> new ContentNotFoundException(id));
+
+        return contentMapper.toResponseDTO(content);
     }
 
-    @Transactional
-    public void deleteContent(UUID id) {
-        if (!contentRepository.existsById(id)) {
-            throw new RuntimeException("No se puede eliminar, contenido no encontrado con ID: " + id);
-        }
-        contentRepository.deleteById(id);
+    public List<ContentResponseDTO> searchContentsByTitle(String title){
+        return contentRepository
+                .findByTitleContainingIgnoreCase(title)
+                .stream()
+                .map(contentMapper::toResponseDTO)
+                .toList();
     }
 
-    @Transactional(readOnly = true)
-    public List<ContentResponseDTO> searchContentsByTitle(String title) {
-        return contentRepository.findByTitleContainingIgnoreCase(title).stream()
-                .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
+    public List<ContentResponseDTO> getContentsByCategoryOrSubcategory(String term){
+        return contentRepository.findByCategoryIgnoreCaseOrSubcategoryIgnoreCase(term, term)
+                .stream()
+                .map(contentMapper::toResponseDTO)
+                .toList();
     }
 
-    @Transactional(readOnly = true)
-    public List<ContentResponseDTO> getContentsByCategoryOrSubcategory(String term) {
-        return contentRepository.findByCategoryContainingIgnoreCaseOrSubcategoryContainingIgnoreCase(term, term).stream()
-                .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
-    }
-
-    @Transactional(readOnly = true)
     public List<ContentResponseDTO> searchContentsByKeyword(String keyword) {
-        String queryKeyword = keyword.toLowerCase();
-        return contentRepository.findAll().stream()
-                .filter(content -> content.getKeywords() != null &&
-                        content.getKeywords().stream()
-                                .anyMatch(k -> k.getWord() != null && k.getWord().toLowerCase().contains(queryKeyword)))
-                .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
+
+        return contentRepository.findByKeyword(keyword)
+                .stream()
+                .map(contentMapper::toResponseDTO)
+                .toList();
     }
-}
+
+    public void deleteContent(UUID id) {
+
+        Content content = contentRepository.findById(id)
+                .orElseThrow(() -> new ContentNotFoundException(id));
+
+        if (content.getFilePath() != null) {
+            fileStorageService.delete(content.getFilePath());
+        }
+
+        contentRepository.delete(content);
+    }
+
+};
